<resources>
    <string name="app_name">MinimalistApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="signuphere">Create a new account? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_icon">Icon Minimalist</string>
    <string name="pol">pol</string>
    <string name="arnau">arnau</string>
    <string name="oscar">oscar</string>
</resources>
