<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AboutUsFragment">

    <!-- Título fijo -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="About Us"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- ScrollView con el contenido desplazable -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Bienvenido a la app de Minimalist. Minimalist es una aplicación para crear recetas y poder ver también las recetas de otras personas. Minimalist está formado por:"
                android:textAlignment="center"
                android:textSize="18sp" />

            <!-- Team Member 1 -->
            <LinearLayout
                android:id="@+id/teamMemberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/oscar"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/oscar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Oscar Gimeno Sáez"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Team Member 2 -->
            <LinearLayout
                android:id="@+id/teamMemberLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/arnau"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/arnau" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Arnau Figueras Moreno"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center" />
            </LinearLayout>

            <!-- Team Member 3 -->
            <LinearLayout
                android:id="@+id/teamMemberLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/pol"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/pol" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pol Corado Martí"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
